time features and spectral updates

--- a/notebooks/Clustering/merge_ds.ipynb
+++ b/notebooks/Clustering/merge_ds.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Merge all datasets\n",
     "Arctic dataframe and dataframe from Waterhouse et al., made in data_exploration/load_ds notebook"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -20,14 +23,14 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.preprocessing import StandardScaler"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -37,45 +40,47 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=RuntimeWarning)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "parent_dir = get_parent_directory()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'/Users/Lisanne/Documents/AI4ER/Mres/ArcticTurbulence'"
+      "text/plain": [
+       "'/Users/Lisanne/Documents/AI4ER/Mres/ArcticTurbulence'"
+      ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "parent_dir"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "global_pkl = os.path.join(parent_dir, \"data/processed/Mashayek2022/input_microstructure.pkl\")\n",
@@ -84,66 +89,68 @@
     "\n",
     "# Rename columns using the rename() method\n",
     "waterhouse_df = global_df.rename(columns={'log_N2_sort': 'log_N2', 'log_kappa': 'LK', 'lat': 'latitude'})"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# arctic_pkl = '/Users/Lisanne/Documents/AI4ER/Mres/ArcticTurbulence/data/processed_data/ml_ready/arctic2_1805.pkl'\n",
-    "arctic_pkl = (os.path.join(parent_dir, \"data/processed/ml_ready/2706_time.pkl\"))\n",
+    "arctic_pkl = (os.path.join(parent_dir, \"data/processed/ml_ready/1710_time.pkl\"))\n",
     "arctic_df = pd.read_pickle(arctic_pkl)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Concatenate dataframes"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Concatenate dataframes"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "all_df = pd.concat([arctic_df, waterhouse_df], axis=0)\n",
-    "all_df = all_df[['depth', 'profile', 'cruise', 'latitude', 'longitude',\n",
+    "arctic_df = all_df[['depth', 'profile', 'cruise', 'latitude', 'longitude',\n",
+    "                 'S', 'T', 'log_eps', 'log_N2', 'dTdz', 'dSdz', 'time', 'season', 'seasonal_sin']]\n",
+    "all_df = all_df[['depth', 'profile', 'cruise', 'latitude',\n",
     "                 'S', 'T', 'log_eps', 'log_N2', 'dTdz', 'dSdz']]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Save merged dataframe"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Save merged dataframe"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
-   "source": [
-    "all_pkl_path = (os.path.join(parent_dir, \"data/processed/ml_ready/merged_all.pkl\"))\n",
-    "all_df.to_pickle(all_pkl_path)"
-   ],
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "arctic_pkl_path = (os.path.join(parent_dir, \"data/processed/ml_ready/merged_arctic.pkl\"))\n",
+    "arctic_df.to_pickle(arctic_pkl_path)\n",
+    "\n",
+    "all_pkl_path = (os.path.join(parent_dir, \"data/processed/ml_ready/merged_all.pkl\"))\n",
+    "all_df.to_pickle(all_pkl_path)"
+   ]
   }
  ],
  "metadata": {
@@ -155,14 +162,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
