clustering plots and seasonality feature

--- a/notebooks/Clustering/k-clustering.ipynb
+++ b/notebooks/Clustering/k-clustering.ipynb
@@ -1125,7 +1125,7 @@
     "# Customize the plot\n",
     "ax.set_title('Cluster Plot on Map')\n",
     "ax.coastlines()\n",
-    "ax.set_extent([0, 170, -70, 89], crs=ccrs.PlateCarree())\n",
+    "# ax.set_extent([0, 170, -70, 89], crs=ccrs.PlateCarree())\n",
     "ax.add_feature(cfeature.BORDERS, linestyle=':')\n",
     "ax.add_feature(cfeature.LAND, edgecolor='black')\n",
     "\n",
