--- a/notebooks/Clustering/merge_ds.ipynb
+++ b/notebooks/Clustering/merge_ds.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -66,7 +66,7 @@
        "'/Users/Lisanne/Documents/AI4ER/Mres/ArcticTurbulence'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -126,6 +126,47 @@
     "                 'S', 'T', 'log_eps', 'log_N2', 'dTdz', 'dSdz', 'time', 'season', 'seasonal_sin']]\n",
     "all_df = all_df[['depth', 'profile', 'cruise', 'latitude',\n",
     "                 'S', 'T', 'log_eps', 'log_N2', 'dTdz', 'dSdz']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Round depth down to the nearest integer\n",
+    "all_df['rounded_depth'] = np.abs(np.floor(all_df['depth']).astype(int))\n",
+    "\n",
+    "# Filter the DataFrame to include only values that are multiples of ten\n",
+    "filtered_df = all_df[all_df['rounded_depth'] % 10 == 0]\n",
+    "\n",
+    "# Group the DataFrame by cruise\n",
+    "grouped_df = filtered_df.groupby('cruise')\n",
+    "\n",
+    "# Create an empty DataFrame to store the filtered data\n",
+    "filtered_df_1500 = pd.DataFrame()\n",
+    "\n",
+    "# Iterate over each group (cruise) in the grouped DataFrame\n",
+    "for cruise, group in grouped_df:\n",
+    "    # Check if the group has more than 1500 points\n",
+    "    if len(group) > 1500:\n",
+    "        # Randomly select 1500 points from the group\n",
+    "        selected_points = group.sample(n=1500, random_state=42)  # Adjust the random_state if desired\n",
+    "        \n",
+    "        # Append the selected points to the filtered DataFrame\n",
+    "        filtered_df_1500 = pd.concat([filtered_df_1500, selected_points])\n",
+    "    else:\n",
+    "        # If the group has less than or equal to 1500 points, append all points\n",
+    "        filtered_df_1500 = pd.concat([filtered_df_1500, group])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_df_1500[\"depth\"] = filtered_df_1500[\"rounded_depth\"]"
    ]
   },
   {
@@ -149,7 +190,10 @@
     "arctic_df.to_pickle(arctic_pkl_path)\n",
     "\n",
     "all_pkl_path = (os.path.join(parent_dir, \"data/processed/ml_ready/merged_all.pkl\"))\n",
-    "all_df.to_pickle(all_pkl_path)"
+    "all_df.to_pickle(all_pkl_path)\n",
+    "\n",
+    "filtered_df_1500_path = (os.path.join(parent_dir, \"data/processed/ml_ready/all_1500.pkl\"))\n",
+    "filtered_df_1500.to_pickle(filtered_df_1500_path)"
    ]
   }
  ],
